--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react": "^18.2.4",
     "@types/react-dom": "^18.2.3",
     "gh-pages": "^5.0.0",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.11.1",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
